# libfastdl-rust

./: .gitignore  Cargo.toml  README.md  devlog.text
dylibexample/: Cargo.toml
src/: lib.rs  main.rs  test.rs
